<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblMobileVerifyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/mobileVerificationText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_bg_selector"
        android:padding="15dp"
        android:text="@string/verifyNumber" />

    <EditText
        android:id="@+id/inputMobileNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/imageView"
        android:layout_below="@+id/imageView"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/edittext_drawable"
        android:editable="false"
        android:ems="10"
        android:inputType="number"
        android:padding="5dp" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/inputMobileNumber"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/inputMobileNumber"
        android:layout_marginRight="30dp"
        android:background="@drawable/btn_bg_selector"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/edit" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/verify_number" />

</RelativeLayout>